--- a/ci-docs/audience-insights/index.yml
+++ b/ci-docs/audience-insights/index.yml
@@ -6,16 +6,16 @@ metadata:
   description: Spikrikeskus, milles on sihtrühmaülevaadete olulised lingid.
   ms.service: customer-insights
   ms.subservice: audience-insights
-  ms.topic: landing-page
+  ms.topic: hub-page
   author: m-hartmann
   ms.author: mhart
   ms.date: 10/16/2020
-  ms.openlocfilehash: 9dcbbecf793cca2ef1d79d6fad7f3b420f5a8806
-  ms.sourcegitcommit: cf9b78559ca189d4c2086a66c879098d56c0377a
+  ms.openlocfilehash: ba5229067c7c338b4f8d0503aaf80f25b6c4002c
+  ms.sourcegitcommit: a8f7d5d0008b2d7d0ff0daeb746126abfc82c253
   ms.translationtype: HT
   ms.contentlocale: et-EE
-  ms.lasthandoff: 11/03/2020
-  ms.locfileid: "4405558"
+  ms.lasthandoff: 12/17/2020
+  ms.locfileid: "4745716"
 landingContent:
 - title: Teave sihtrühmaülevaadete kohta
   linkLists:
@@ -27,36 +27,36 @@ landingContent:
       url: whats-new-audience-insights.md
     - text: Kogukonna sait
       url: https://go.microsoft.com/fwlink/?linkid=2073991
-- title: Andmeallikate hankimine
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Andmeallikate lisamine
-      url: data-sources.md
-    - text: Astmeline värskendamine
-      url: incremental-refresh-data-sources.md
-    - text: Olemitest arusaamine
-      url: entities.md
 - title: Andmete ühtlustamine
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: Vastendus
-      url: map-entities.md
-    - text: Vastenda
-      url: match-entities.md
-    - text: Ühendamine
-      url: merge-entities.md
-- title: Kliendiprofiilide täpsustamine
+    - text: Andmeallikate ülevaade
+      url: data-sources.md
+    - text: Ühtlustamise ülevaade
+      url: data-unification.md
+    - text: Olemitest arusaamine
+      url: entities.md
+- title: Andmete rikastamine ja täpsustamine
   linkLists:
   - linkListType: how-to-guide
     links:
+    - text: Kliendiprofiilide rikastamine
+      url: enrichment-hub.md
     - text: Suhtluse konfigureerimine
       url: relationships.md
     - text: Kliendi tegevuste loendamine
       url: activities.md
-    - text: Tooge oma masinõppe mudelid
-      url: custom-models.md
+- title: Hangi ülevaateid
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Segmentide loomine
+      url: segments.md
+    - text: Näitajate loomine
+      url: measures.md
+    - text: Andmete täiendamine prognoosidega
+      url: predictions.md
 - title: Ekspordi kliendiandmed
   linkLists:
   - linkListType: how-to-guide
