commit translated contents

--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -19,13 +19,13 @@
     - name: Tutvuge moodulitega
       items:
         - name: Andmete valmendamine
-          href: 'https://docs.microsoft.com/learn/modules/ingest-data-customer-insights/'
+          href: /learn/modules/ingest-data-customer-insights/
         - name: Kliendi koondprofiili loomine
-          href: 'https://docs.microsoft.com/learn/modules/unified-customer-profile/'
+          href: /learn/modules/unified-customer-profile/
         - name: Rakendusega töötamine
-          href: 'https://docs.microsoft.com/learn/modules/working-with-customer-insights/'
+          href: /learn/modules/working-with-customer-insights/
         - name: Andmete ja prognooside rikastamine
-          href: 'https://docs.microsoft.com/learn/modules/enrich-data/'
+          href: /learn/modules/enrich-data/
     - name: Andmeallikad
       items:
         - name: Andmeallikate ülevaade
@@ -114,6 +114,12 @@
       items:
         - name: Ekspordisihtkohtade ülevaade
           href: audience-insights/export-destinations.md
+        - name: AdRoll
+          href: audience-insights/export-adroll.md
+        - name: Adobe Campaign Standard
+          href: audience-insights/export-adobe-campaign-standard.md
+        - name: Adobe Experience Platform
+          href: audience-insights/export-adobe-experience-platform.md
         - name: Autopiloot
           href: audience-insights/export-autopilot.md
         - name: Azure'i bloobimälu
