--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -65,7 +65,7 @@
         - name: Kliendiprofiilide rikastamine
           href: audience-insights/enrichment-hub.md
         - name: Tootemargi ja huvide külgetõmme
-          href: audience-insights/enrichment-microsoft-graph.md
+          href: audience-insights/enrichment-microsoft.md
         - name: Rikastamine ettevõtte HERE Technologies teenusega
           href: audience-insights/enrichment-here.md
         - name: Leadspace'iga rikastamine
@@ -104,6 +104,8 @@
           href: audience-insights/predict-product-recommendation.md
         - name: Tootesoovituse prognoosi näidisjuhend
           href: audience-insights/sample-guide-predict-product-recommendation.md
+        - name: Prognoosidel põhinevate segmentide loomine
+          href: audience-insights/prediction-based-segment.md
         - name: Kohandatud masinõppe mudelite juurutamine
           href: audience-insights/custom-models.md
         - name: Eksperimendid Azure’i masinõppega
@@ -112,58 +114,72 @@
           href: audience-insights/machine-learning-studio-experiments.md
     - name: Ekspordisuvandid
       items:
-        - name: Ekspordisihtkohtade ülevaade
-          href: audience-insights/export-destinations.md
-        - name: AdRoll
-          href: audience-insights/export-adroll.md
-        - name: Adobe Campaign Standard
-          href: audience-insights/export-adobe-campaign-standard.md
-        - name: Adobe Experience Platform
-          href: audience-insights/export-adobe-experience-platform.md
-        - name: Autopiloot
-          href: audience-insights/export-autopilot.md
-        - name: Azure'i bloobimälu
-          href: audience-insights/export-azure-blob-storage.md
-        - name: Azure Data Lake Storage Gen2
-          href: audience-insights/export-azure-data-lake-storage-gen2.md
-        - name: DotDigital
-          href: audience-insights/export-dotdigital.md
-        - name: Dynamics 365 Customer Service (lisandmoodul)
-          href: audience-insights/customer-card-add-in.md
-        - name: Dynamics 365 Marketing
-          href: audience-insights/export-dynamics365-marketing.md
-        - name: Dynamics 365 Sales
-          href: audience-insights/export-dynamics365-sales.md
-        - name: Dynamics 365 Salesi keskus (lisandmoodul)
-          href: audience-insights/customer-card-add-in.md
-        - name: Facebooki reklaamihaldur
-          href: audience-insights/export-facebook.md
-        - name: Google Ads
-          href: audience-insights/export-google-ads.md
-        - name: LiveRamp
-          href: audience-insights/export-liveramp.md
-        - name: Mailchimp
-          href: audience-insights/export-mailchimp.md
-        - name: Microsoft Teams (bot)
-          href: audience-insights/export-teams-bot.md
-        - name: Marketo
-          href: audience-insights/export-marketo.md
-        - name: Power BI
-          href: audience-insights/export-power-bi.md
-        - name: Power Apps
-          href: audience-insights/export-power-apps.md
-        - name: Power Automate
-          href: audience-insights/export-power-automate.md
-        - name: SendGrid (Saada välja)
-          href: audience-insights/export-sendgrid.md
-        - name: SFTP
-          href: audience-insights/export-sftp.md
+        - name: Eksportimised
+          items:
+            - name: Eksportimine (eelversioon) ülevaade
+              href: audience-insights/export-destinations.md
+            - name: AdRoll
+              href: audience-insights/export-adroll.md
+            - name: Autopiloot
+              href: audience-insights/export-autopilot.md
+            - name: Azure Blob Storage
+              href: audience-insights/export-azure-blob-storage.md
+            - name: Azure Data Lake Storage Gen2
+              href: audience-insights/export-azure-data-lake-storage-gen2.md
+            - name: Adobe Campaign Standard
+              href: audience-insights/export-adobe-campaign-standard.md
+            - name: Adobe Experience Platform
+              href: audience-insights/export-adobe-experience-platform.md
+            - name: Campaign Monitor
+              href: audience-insights/export-campaign-monitor.md
+            - name: Constant Contact
+              href: audience-insights/export-constant-contact.md
+            - name: DotDigital
+              href: audience-insights/export-dotdigital.md
+            - name: Dynamics 365 Marketing
+              href: audience-insights/export-dynamics365-marketing.md
+            - name: Dynamics 365 Sales
+              href: audience-insights/export-dynamics365-sales.md
+            - name: Facebooki reklaamihaldur
+              href: audience-insights/export-facebook.md
+            - name: Google Ads
+              href: audience-insights/export-google-ads.md
+            - name: LiveRamp
+              href: audience-insights/export-liveramp.md
+            - name: Mailchimp
+              href: audience-insights/export-mailchimp.md
+            - name: Marketo
+              href: audience-insights/export-marketo.md
+            - name: RollWorks
+              href: audience-insights/export-rollworks.md
+            - name: SendGrid (Saada välja)
+              href: audience-insights/export-sendgrid.md
+            - name: Snapchat
+              href: audience-insights/export-snapchat.md
+            - name: SFTP
+              href: audience-insights/export-sftp.md
+        - name: Muud kasutusviisid
+          items:
+            - name: Dynamics 365 Customer Service (lisandmoodul)
+              href: audience-insights/customer-card-add-in.md
+            - name: Dynamics 365 Salesi keskus (lisandmoodul)
+              href: audience-insights/customer-card-add-in.md
+            - name: Microsoft Teams (bot)
+              href: audience-insights/export-teams-bot.md
+            - name: Power Apps
+              href: audience-insights/export-power-apps.md
+            - name: Power Automate
+              href: audience-insights/export-power-automate.md
+            - name: Power BI
+              href: audience-insights/export-power-bi.md
     - name: Haldus
       items:
         - name: Süsteemikonfiguratsiooni seadistamine
           href: audience-insights/system.md
         - name: Kasutaja õiguste määramine
           href: audience-insights/permissions.md
+        - name: Ühenduste (eelversioon) ülevaade
+          href: audience-insights/connections.md
         - name: Mitme keskkonna haldamine
           href: audience-insights/manage-environments.md
         - name: ADLS-i salvestuskontoga ühenduse loomine teenusesubjekti kaudu
@@ -216,7 +232,11 @@
           href: engagement-insights/custom-reports.md
         - name: Koondatud profiiliaruannete loomine
           href: engagement-insights/profile-reports.md
-    - name: Arendaja allikad
+    - name: Teekonna analüütika
+      items:
+        - name: Lehterdiagrammi loomine ja haldamine
+          href: engagement-insights/funnel-reports.md
+    - name: Arendaja ressursid
       items:
         - name: Arendajaressursside ülevaade
           href: engagement-insights/developer-resources.md
