--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -66,6 +66,8 @@
           href: audience-insights/enrichment-hub.md
         - name: Tootemargi ja huvide külgetõmme
           href: audience-insights/enrichment-microsoft.md
+        - name: Täiustatud aadressid
+          href: audience-insights/enrichment-enhanced-addresses.md
         - name: Rikastamine ettevõtte HERE Technologies teenusega
           href: audience-insights/enrichment-here.md
         - name: Leadspace'iga rikastamine
@@ -76,14 +78,20 @@
           href: audience-insights/enrichment-SFTP-custom-import.md
     - name: Segmendid ja näitajad
       items:
-        - name: Segmentide ja kliendirühmade loomine
+        - name: Segmentide ülevaade
           href: audience-insights/segments.md
+        - name: Segmentide ja kliendirühmade loomine
+          href: audience-insights/segment-builder.md
+        - name: Mõõtmisepõhised segmendisoovitused
+          href: audience-insights/suggested-segments.md
+        - name: Tegevusepõhised segmendisoovitused
+          href: audience-insights/suggested-segments-activity.md
         - name: Segmendi ülevaadete hankimine
           href: audience-insights/segment-insights.md
-        - name: Vaata soovitatud segmente
-          href: audience-insights/suggested-segments.md
         - name: Leia sarnased kliendid
           href: audience-insights/find-similar-customer-segments.md
+    - name: Näitajad
+      items:
         - name: Mõõtude ja KPI-de määratlemine
           href: audience-insights/measures.md
     - name: Prognoosid
@@ -116,7 +124,7 @@
       items:
         - name: Eksportimised
           items:
-            - name: Eksportimine (eelversioon) ülevaade
+            - name: Eekspordi ülevaade
               href: audience-insights/export-destinations.md
             - name: AdRoll
               href: audience-insights/export-adroll.md
@@ -126,6 +134,8 @@
               href: audience-insights/export-azure-blob-storage.md
             - name: Azure Data Lake Storage Gen2
               href: audience-insights/export-azure-data-lake-storage-gen2.md
+            - name: Azure Synapse -i Analytics
+              href: audience-insights/export-azure-synapse-analytics.md
             - name: Adobe Campaign Standard
               href: audience-insights/export-adobe-campaign-standard.md
             - name: Adobe Experience Platform
@@ -160,9 +170,7 @@
               href: audience-insights/export-sftp.md
         - name: Muud kasutusviisid
           items:
-            - name: Dynamics 365 Customer Service (lisandmoodul)
-              href: audience-insights/customer-card-add-in.md
-            - name: Dynamics 365 Salesi keskus (lisandmoodul)
+            - name: Rakenduse Dynamics 365 kliendikaardi lisandmoodul
               href: audience-insights/customer-card-add-in.md
             - name: Microsoft Teams (bot)
               href: audience-insights/export-teams-bot.md
@@ -178,7 +186,7 @@
           href: audience-insights/system.md
         - name: Kasutaja õiguste määramine
           href: audience-insights/permissions.md
-        - name: Ühenduste (eelversioon) ülevaade
+        - name: Ühenduste ülevaade
           href: audience-insights/connections.md
         - name: Mitme keskkonna haldamine
           href: audience-insights/manage-environments.md
