--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -96,30 +96,40 @@
           href: audience-insights/measures.md
     - name: Prognoosid
       items:
-        - name: Andmete lõpetamine väärtuse prognoose kasutades
-          href: audience-insights/predictions.md
-        - name: Kordustellimuste voolavuse prognoosimine
-          href: audience-insights/predict-subscription-churn.md
-        - name: Tellimusevoolavuse prognoosi näidisjuhend
-          href: audience-insights/sample-guide-predict-subscription-churn.md
-        - name: Tehinguvoolavuse prognoosimine
-          href: audience-insights/predict-transactional-churn.md
-        - name: Tehinguvoolavuse prognoosi näidisjuhend
-          href: audience-insights/sample-guide-predict-transactional-churn.md
-        - name: Kliendi eluea väärtuse (CLV) prognoosimine
-          href: audience-insights/predict-customer-lifetime-value.md
-        - name: Tootesoovituse prognoosimine
-          href: audience-insights/predict-product-recommendation.md
-        - name: Tootesoovituse prognoosi näidisjuhend
-          href: audience-insights/sample-guide-predict-product-recommendation.md
+        - name: Andmete ennustamine tehisintellekti abil
+          items:
+            - name: Prognoosimudelite ülevaade
+              href: audience-insights/predictions-overview.md
+            - name: Kliendi eluea väärtuse (CLV) prognoosimine
+              href: audience-insights/predict-customer-lifetime-value.md
+            - name: Tootesoovituse prognoosimine
+              href: audience-insights/predict-product-recommendation.md
+            - name: Kordustellimuste voolavuse prognoosimine
+              href: audience-insights/predict-subscription-churn.md
+            - name: Tehinguvoolavuse prognoosimine
+              href: audience-insights/predict-transactional-churn.md
+            - name: Azure'i masinõppe kohandatud mudelite kasutamine
+              href: audience-insights/custom-models.md
+            - name: Osaliselt puuduvate andmete täiustamine
+              href: audience-insights/predictions.md
+        - name: Näidisjuhendid
+          items:
+            - name: CLV prognoosi näidisjuhend
+              href: audience-insights/sample-guide-predict-clv.md
+            - name: Tellimusevoolavuse prognoosi näidisjuhend
+              href: audience-insights/sample-guide-predict-subscription-churn.md
+            - name: Tehinguvoolavuse prognoosi näidisjuhend
+              href: audience-insights/sample-guide-predict-transactional-churn.md
+            - name: Tootesoovituse prognoosi näidisjuhend
+              href: audience-insights/sample-guide-predict-product-recommendation.md
+            - name: Eksperimendid Azure’i masinõppega
+              href: audience-insights/azure-machine-learning-experiments.md
+            - name: Azure'i masinõppe stuudio eksperimendid
+              href: audience-insights/machine-learning-studio-experiments.md
+        - name: Prognooside haldamine
+          href: audience-insights/manage-predictions.md
         - name: Prognoosidel põhinevate segmentide loomine
           href: audience-insights/prediction-based-segment.md
-        - name: Kohandatud masinõppe mudelite juurutamine
-          href: audience-insights/custom-models.md
-        - name: Eksperimendid Azure’i masinõppega
-          href: audience-insights/azure-machine-learning-experiments.md
-        - name: Azure'i masinõppe stuudio eksperimendid
-          href: audience-insights/machine-learning-studio-experiments.md
     - name: Ekspordisuvandid
       items:
         - name: Eksportimised
@@ -154,12 +164,18 @@
               href: audience-insights/export-facebook.md
             - name: Google Ads
               href: audience-insights/export-google-ads.md
+            - name: LinkedIn Ads
+              href: audience-insights/export-linkedin-ads.md
             - name: LiveRamp
               href: audience-insights/export-liveramp.md
             - name: Mailchimp
               href: audience-insights/export-mailchimp.md
             - name: Marketo
               href: audience-insights/export-marketo.md
+            - name: Microsoft Advertising
+              href: audience-insights/export-microsoft-advertising.md
+            - name: Omnisend
+              href: audience-insights/export-omnisend.md
             - name: RollWorks
               href: audience-insights/export-rollworks.md
             - name: SendGrid (Saada välja)
@@ -200,6 +216,8 @@
           href: audience-insights/integrate-engagement-insights.md
         - name: Common Data Modeli olemi skeemide ülevaatamine
           href: audience-insights/entity-schemas.md
+        - name: Customer Insightsi andmed teenuses Dataverse
+          href: audience-insights/customer-insights-dataverse.md
         - name: API-dega töötamine
           href: audience-insights/apis.md
         - name: API ülevaade
@@ -240,6 +258,12 @@
           href: engagement-insights/custom-reports.md
         - name: Koondatud profiiliaruannete loomine
           href: engagement-insights/profile-reports.md
+        - name: Dimensioonide kuvamine ja loomine
+          href: engagement-insights/dimensions.md
+        - name: Mõõdikute kuvamine ja loomine
+          href: engagement-insights/metrics.md
+        - name: Segmentide kuvamine ja loomine
+          href: engagement-insights/segments.md
     - name: Teekonna analüütika
       items:
         - name: Lehterdiagrammi loomine ja haldamine
