--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -72,7 +72,7 @@
           href: audience-insights/enrichment-here.md
         - name: Leadspace'iga rikastamine
           href: audience-insights/enrichment-leadspace.md
-        - name: Experianiga rikastamine
+        - name: Rikastage koos Experian-iga
           href: audience-insights/enrichment-experian.md
         - name: Rikastamine SFTP-põhise kohandatud importimise kaudu
           href: audience-insights/enrichment-SFTP-custom-import.md
@@ -136,6 +136,8 @@
           items:
             - name: Eekspordi ülevaade
               href: audience-insights/export-destinations.md
+            - name: Aktiivsed kampaaniad
+              href: audience-insights/export-active-campaign.md
             - name: AdRoll
               href: audience-insights/export-adroll.md
             - name: Autopiloot
@@ -144,7 +146,7 @@
               href: audience-insights/export-azure-blob-storage.md
             - name: Azure Data Lake Storage Gen2
               href: audience-insights/export-azure-data-lake-storage-gen2.md
-            - name: Azure Synapse -i Analytics
+            - name: Azure Synapse Analytics
               href: audience-insights/export-azure-synapse-analytics.md
             - name: Adobe Campaign Standard
               href: audience-insights/export-adobe-campaign-standard.md
@@ -178,8 +180,12 @@
               href: audience-insights/export-omnisend.md
             - name: RollWorks
               href: audience-insights/export-rollworks.md
+            - name: Salesforce Marketing Cloud
+              href: audience-insights/export-salesforce.md
             - name: SendGrid (Saada välja)
               href: audience-insights/export-sendgrid.md
+            - name: SendInBlue
+              href: audience-insights/export-sendinblue.md
             - name: Snapchat
               href: audience-insights/export-snapchat.md
             - name: SFTP
@@ -240,15 +246,15 @@
           href: engagement-insights/get-started.md
         - name: Tööruumi loomine
           href: engagement-insights/create-workspace.md
-        - name: Veebisaidile funktsioonide lisamine
-          href: engagement-insights/instrument-website.md
+        - name: Jäädvustage sündmusi veebisaitidelt ja mobiilirakendustest
+          href: engagement-insights/developer-resources.md
         - name: Mõisted ja terminid
           href: engagement-insights/glossary.md
     - name: Sündmused
       items:
         - name: Sündmuste loomine ja muutmine
           href: engagement-insights/refined-events.md
-        - name: Sündmuste eksportimine
+        - name: Ekspordi sündmused
           href: engagement-insights/export-events.md
     - name: Aruanded
       items:
@@ -272,11 +278,19 @@
       items:
         - name: Arendajaressursside ülevaade
           href: engagement-insights/developer-resources.md
-        - name: Web SDK õpetus
+        - name: Veebi SDK juhend
           href: engagement-insights/advanced-SDK-implementation.md
         - name: Web SDK näidis
           href: engagement-insights/websdk-sample.md
-    - name: Administreerimine
+        - name: Android SDK juhend
+          href: engagement-insights/get-started-android.md
+        - name: Android SDK näidis
+          href: engagement-insights/androidsdk-sample.md
+        - name: iOS SDK juhend
+          href: engagement-insights/get-started-ios.md
+        - name: iOS SDK näidis
+          href: engagement-insights/iossdk-sample.md
+    - name: Haldus
       items:
         - name: Rollid ja õigused
           href: engagement-insights/user-roles.md
