commit translated contents

--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -166,6 +166,8 @@
               href: audience-insights/export-facebook.md
             - name: Google Ads
               href: audience-insights/export-google-ads.md
+            - name: Klaviyo
+              href: audience-insights/export-klaviyo.md
             - name: LinkedIn Ads
               href: audience-insights/export-linkedin-ads.md
             - name: LiveRamp
@@ -310,5 +312,13 @@
       href: engagement-insights/regional-availability.md
     - name: Teenusepiirangud
       href: engagement-insights/quotas.md
-- name: Võtke ühendust tugiteenusega
-  href: 'https://admin.powerplatform.microsoft.com/support'
+- name: Sihtrühma ja kaasamisülevaadete integreerimine
+  items:
+    - name: Kaasamise ülevaadete ja sihtrühma ülevaadete linkimine
+      href: engagement-insights/integrate-audience-insights-engagement-insights.md
+    - name: Sihtrühma ülevaadete segmentide kasutamine kaasamisülevaadete aruannetes
+      href: engagement-insights/integrate-audience-insights-segments.md
+    - name: Demograafiliste sihtide kasutamine käitumusliku teabe tükeldamiseks
+      href: engagement-insights/curate-dimensions.md
+- name: Hangi tuge
+  href: 'https://dynamics.microsoft.com/en-us/support/'
