--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -2,8 +2,14 @@
   href: index.yml
 - name: Toote ülevaade
   href: overview.md
-- name: Loo prooviversioon
-  href: audience-insights/get-started-trial.md
+- name: Tasuta prooviversioon
+  items:
+    - name: Tasuta prooviversiooni kasutajaks registreerumine
+      href: trial-signup.md
+    - name: Prooviversiooni KKK
+      href: trial-FAQ.md
+- name: Alustage tasulise litsentsiga
+  href: paid-license.md
 - name: Avage oma keskkond
   href: 'https://home.ci.ai.dynamics.com/'
 - name: Sihtrühmaülevaated
@@ -19,9 +25,11 @@
         - name: Lühijuhend
           href: audience-insights/get-started.md
         - name: Uue keskkonna loomine
-          href: audience-insights/get-started-paid.md
+          href: audience-insights/create-environment.md
         - name: Sihtrühma ülevaadete vaatamine
           href: audience-insights/home.md
+    - name: Ärikontodega töötamine
+      href: audience-insights/work-with-business-accounts.md
     - name: Tutvuge moodulitega
       items:
         - name: Andmete valmendamine
@@ -66,6 +74,8 @@
           href: audience-insights/relationships.md
         - name: Kliendi tegevuste loendamine
           href: audience-insights/activities.md
+        - name: Semantiliste vastenduste määratlemine
+          href: audience-insights/semantic-mappings.md
     - name: Andmete rikastamine
       items:
         - name: Kliendiprofiilide rikastamine
@@ -114,7 +124,7 @@
               href: audience-insights/predict-product-recommendation.md
             - name: Kordustellimuste voolavuse prognoosimine
               href: audience-insights/predict-subscription-churn.md
-            - name: Tehinguvoolavuse prognoosimine
+            - name: Tehinguvoolavuse prognoos
               href: audience-insights/predict-transactional-churn.md
             - name: Azure'i masinõppe kohandatud mudelite kasutamine
               href: audience-insights/custom-models.md
@@ -222,10 +232,14 @@
           href: audience-insights/connections.md
         - name: Mitme keskkonna haldamine
           href: audience-insights/manage-environments.md
-        - name: ADLS-i salvestuskontoga ühenduse loomine teenusesubjekti kaudu
-          href: audience-insights/connect-service-principal.md
         - name: Toetatud keeled
           href: audience-insights/supported-languages.md
+        - name: Turve
+          items:
+            - name: Tooge oma Key Vault
+              href: audience-insights/use-azure-key-vault.md
+            - name: ADLS-i salvestuskontoga ühenduse loomine teenusesubjekti kaudu
+              href: audience-insights/connect-service-principal.md
     - name: Laiendatavus
       items:
         - name: Veebiandmete integreerimine kaasamisülevaadetest
@@ -248,6 +262,8 @@
       items:
         - name: Lühijuhend
           href: engagement-insights/get-started.md
+        - name: Keskkonna loomine
+          href: engagement-insights/create-new-environment.md
         - name: Tööruumi loomine
           href: engagement-insights/create-workspace.md
         - name: Jäädvustage sündmusi veebisaitidelt ja mobiilirakendustest
