--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -48,7 +48,7 @@
           href: audience-insights/connect-power-query.md
         - name: Common Data Modeli kausta andmeallikana lisamine
           href: audience-insights/connect-common-data-model.md
-        - name: Dataverse'i hallatava andmejärve lisamine
+        - name: Dataverse hallatava andmejärve lisamine
           href: audience-insights/connect-dataverse-managed-lake.md
         - name: Andmeallikate astmeline värskendamine
           href: audience-insights/incremental-refresh-data-sources.md
@@ -84,13 +84,15 @@
           href: audience-insights/enrichment-microsoft.md
         - name: Täiustatud aadressid
           href: audience-insights/enrichment-enhanced-addresses.md
+        - name: Ettevõtte andmete täiustamine
+          href: audience-insights/enrichment-enhanced-company-data.md
         - name: Rikasta Azure Maps abil
           href: audience-insights/enrichment-azure-maps.md
         - name: Rikastamine ettevõtte HERE Technologies teenusega
           href: audience-insights/enrichment-here.md
         - name: Leadspace'iga rikastamine
           href: audience-insights/enrichment-leadspace.md
-        - name: Rikastage koos Experian-iga
+        - name: Experianiga rikastamine
           href: audience-insights/enrichment-experian.md
         - name: Rikastamine SFTP-põhise kohandatud importimise kaudu
           href: audience-insights/enrichment-SFTP-custom-import.md
@@ -164,7 +166,7 @@
               href: audience-insights/export-azure-blob-storage.md
             - name: Azure Data Lake Storage Gen2
               href: audience-insights/export-azure-data-lake-storage-gen2.md
-            - name: Azure Synapse Analytics
+            - name: Azure Synapse Analüütika
               href: audience-insights/export-azure-synapse-analytics.md
             - name: Adobe Campaign Standard
               href: audience-insights/export-adobe-campaign-standard.md
@@ -180,7 +182,7 @@
               href: audience-insights/export-dynamics365-marketing.md
             - name: Dynamics 365 Sales
               href: audience-insights/export-dynamics365-sales.md
-            - name: Facebooki reklaamihaldur
+            - name: Facebook reklaamihaldur
               href: audience-insights/export-facebook.md
             - name: Google Ads
               href: audience-insights/export-google-ads.md
@@ -244,12 +246,46 @@
           href: audience-insights/integrate-engagement-insights.md
         - name: Common Data Modeli olemi skeemide ülevaatamine
           href: audience-insights/entity-schemas.md
-        - name: Customer Insightsi andmed teenuses Dataverse
+        - name: Kliendiülevaate andmed Dataverse
           href: audience-insights/customer-insights-dataverse.md
         - name: API-dega töötamine
           href: audience-insights/apis.md
         - name: API ülevaade
           href: 'https://developer.ci.ai.dynamics.com/api-details#api=CustomerInsights'
+- name: Nõusoleku haldus (eelvaade)
+  items:
+    - name: Spikrikeskus
+      href: consent-management/index.yml
+    - name: Võimaluste ülevaade
+      href: consent-management/overview.md
+    - name: Alustamine
+      items:
+        - name: Alustamine
+          href: consent-management/get-started.md
+        - name: Mõisted ja terminid
+          href: consent-management/glossary.md
+    - name: Nõusoleku andmete importimine
+      items:
+        - name: Nõusoleku andmete importimine
+          href: consent-management/import-consent-data.md
+        - name: Nõusolekuandmete seadmine ja nõusolekueelistuste rakendamine
+          href: consent-management/set-consent-rules.md
+    - name: Nõusolekuandmete haldamine
+      items:
+        - name: Nõusolekureeglite lubamine vaatajaskonna ülevaates
+          href: audience-insights/activate-consent.md
+        - name: Vaikimisi nõusolekureeglite haldamine vaatajaskonna ülevaatesegmentides
+          href: audience-insights/change-default-consent-rules.md
+    - name: Sätete ja kasutajate haldamine
+      items:
+        - name: Süsteemisätete konfigureerimine
+          href: consent-management/system-settings.md
+        - name: Kasutajate ja õiguste haldamine
+          href: consent-management/manage-users.md
+    - name: Nõusolekuandmete kasutamine
+      items:
+        - name: Ennustuste loomine nõusolekuandmetega
+          href: consent-management/predictions-consent-data.md
 - name: Kaasamisülevaated (eelversioon)
   items:
     - name: Spikrikeskus
@@ -302,11 +338,11 @@
           href: engagement-insights/advanced-SDK-implementation.md
         - name: Web SDK näidis
           href: engagement-insights/websdk-sample.md
-        - name: Android SDK juhend
+        - name: Androidi SDK juhend
           href: engagement-insights/get-started-android.md
-        - name: Android SDK näidis
+        - name: Android SDK proov
           href: engagement-insights/androidsdk-sample.md
-        - name: iOS SDK juhend
+        - name: iOS-i SDK juhend
           href: engagement-insights/get-started-ios.md
         - name: iOS SDK näidis
           href: engagement-insights/iossdk-sample.md
