commit translated contents

--- a/ci-docs/TOC.yml
+++ b/ci-docs/TOC.yml
@@ -48,7 +48,7 @@
           href: audience-insights/connect-power-query.md
         - name: Common Data Modeli kausta andmeallikana lisamine
           href: audience-insights/connect-common-data-model.md
-        - name: Dataverse hallatava andmejärve lisamine
+        - name: Dataverse'i hallatava andmejärve lisamine
           href: audience-insights/connect-dataverse-managed-lake.md
         - name: Andmeallikate astmeline värskendamine
           href: audience-insights/incremental-refresh-data-sources.md
@@ -84,7 +84,7 @@
           href: audience-insights/enrichment-microsoft.md
         - name: Täiustatud aadressid
           href: audience-insights/enrichment-enhanced-addresses.md
-        - name: Ettevõtte andmete täiustamine
+        - name: Täiustatud ettevõtte andmed
           href: audience-insights/enrichment-enhanced-company-data.md
         - name: Rikasta Azure Maps abil
           href: audience-insights/enrichment-azure-maps.md
@@ -92,8 +92,10 @@
           href: audience-insights/enrichment-here.md
         - name: Leadspace'iga rikastamine
           href: audience-insights/enrichment-leadspace.md
-        - name: Experianiga rikastamine
+        - name: Rikastage koos Experian-iga
           href: audience-insights/enrichment-experian.md
+        - name: Andmetega rikastamine Office 365
+          href: audience-insights/enrichment-office.md
         - name: Rikastamine SFTP-põhise kohandatud importimise kaudu
           href: audience-insights/enrichment-SFTP-custom-import.md
     - name: Segmendid
@@ -144,8 +146,6 @@
               href: audience-insights/sample-guide-predict-product-recommendation.md
             - name: Eksperimendid Azure’i masinõppega
               href: audience-insights/azure-machine-learning-experiments.md
-            - name: Azure'i masinõppe stuudio eksperimendid
-              href: audience-insights/machine-learning-studio-experiments.md
         - name: Prognooside haldamine
           href: audience-insights/manage-predictions.md
         - name: Prognoosidel põhinevate segmentide loomine
@@ -166,7 +166,7 @@
               href: audience-insights/export-azure-blob-storage.md
             - name: Azure Data Lake Storage Gen2
               href: audience-insights/export-azure-data-lake-storage-gen2.md
-            - name: Azure Synapse Analüütika
+            - name: Azure Synapse Analytics
               href: audience-insights/export-azure-synapse-analytics.md
             - name: Adobe Campaign Standard
               href: audience-insights/export-adobe-campaign-standard.md
@@ -182,7 +182,7 @@
               href: audience-insights/export-dynamics365-marketing.md
             - name: Dynamics 365 Sales
               href: audience-insights/export-dynamics365-sales.md
-            - name: Facebook reklaamihaldur
+            - name: Facebooki reklaamihaldur
               href: audience-insights/export-facebook.md
             - name: Google Ads
               href: audience-insights/export-google-ads.md
@@ -240,27 +240,29 @@
               href: audience-insights/use-azure-key-vault.md
             - name: ADLS-i salvestuskontoga ühenduse loomine teenusesubjekti kaudu
               href: audience-insights/connect-service-principal.md
+            - name: Diagnostikalogide eksportimine
+              href: audience-insights/diagnostics.md
     - name: Laiendatavus
       items:
         - name: Veebiandmete integreerimine kaasamisülevaadetest
           href: audience-insights/integrate-engagement-insights.md
         - name: Common Data Modeli olemi skeemide ülevaatamine
           href: audience-insights/entity-schemas.md
-        - name: Kliendiülevaate andmed Dataverse
+        - name: Customer Insightsi andmed teenuses Dataverse
           href: audience-insights/customer-insights-dataverse.md
         - name: API-dega töötamine
           href: audience-insights/apis.md
         - name: API ülevaade
           href: 'https://developer.ci.ai.dynamics.com/api-details#api=CustomerInsights'
-- name: Nõusoleku haldus (eelvaade)
+- name: Nõusolekuhaldus (eelvaade)
   items:
     - name: Spikrikeskus
       href: consent-management/index.yml
     - name: Võimaluste ülevaade
       href: consent-management/overview.md
-    - name: Alustamine
+    - name: Hakkame pihta
       items:
-        - name: Alustamine
+        - name: Hakkame pihta
           href: consent-management/get-started.md
         - name: Mõisted ja terminid
           href: consent-management/glossary.md
@@ -274,7 +276,7 @@
       items:
         - name: Nõusolekureeglite lubamine vaatajaskonna ülevaates
           href: audience-insights/activate-consent.md
-        - name: Vaikimisi nõusolekureeglite haldamine vaatajaskonna ülevaatesegmentides
+        - name: Vaatajaskonna statistikasegmentides nõusoleku vaikereeglite haldamine
           href: audience-insights/change-default-consent-rules.md
     - name: Sätete ja kasutajate haldamine
       items:
@@ -284,7 +286,7 @@
           href: consent-management/manage-users.md
     - name: Nõusolekuandmete kasutamine
       items:
-        - name: Ennustuste loomine nõusolekuandmetega
+        - name: Nõusolekuandmetega ennustuste loomine
           href: consent-management/predictions-consent-data.md
 - name: Kaasamisülevaated (eelversioon)
   items:
@@ -338,11 +340,11 @@
           href: engagement-insights/advanced-SDK-implementation.md
         - name: Web SDK näidis
           href: engagement-insights/websdk-sample.md
-        - name: Androidi SDK juhend
+        - name: Android SDK juhend
           href: engagement-insights/get-started-android.md
-        - name: Android SDK proov
+        - name: Android SDK näidis
           href: engagement-insights/androidsdk-sample.md
-        - name: iOS-i SDK juhend
+        - name: iOS SDK juhend
           href: engagement-insights/get-started-ios.md
         - name: iOS SDK näidis
           href: engagement-insights/iossdk-sample.md
