--- a/ci-docs/index.yml
+++ b/ci-docs/index.yml
@@ -4,17 +4,17 @@ metadata:
   author: m-hartmann
   description: Otsige asjakohaseid artikleid, et alustada spikri kasutamist.
   ms.author: mhart
-  ms.date: 03/02/2022
+  ms.date: 10/29/2020
   ms.service: customer-insights
   ms.topic: landing-page
-  ms.openlocfilehash: e154b37f57bb2765f48a9f6b38f86dffcb05f403
-  ms.sourcegitcommit: a371fc1e75b2321e45d3f972a3ac84c725f8cc38
+  ms.openlocfilehash: e9c4aa3347d6f477751804790bd3dc9b20eb5dbe
+  ms.sourcegitcommit: bae40184312ab27b95c140a044875c2daea37951
   ms.translationtype: HT
   ms.contentlocale: et-EE
-  ms.lasthandoff: 02/10/2022
-  ms.locfileid: "8107194"
+  ms.lasthandoff: 03/15/2021
+  ms.locfileid: "5598453"
 title: Dynamics 365 Customer Insightsi dokumentatsioon
-summary: Saate leida kasulikke ressursse, et alustada ning saada teavet Customer Insightsi funktsioonide ja võimaluste kohta.
+summary: Otsige kasulikke ressursse, et alustada ja tutvuda Customer Insightsi funktsioonide ning võimalustega.
 landingContent:
 - title: Customer Insightsi tutvustus
   linkLists:
@@ -23,41 +23,19 @@ landingContent:
     - text: Customer Insightsi ülevaade
       url: overview.md
     - text: Väljalaskeplaanid
-      url: /dynamics365/release-plans/
-    - text: Avastage CDP
-      url: https://dynamics.microsoft.com/ai/customer-insights/
-  - linkListType: learn
-    links:
-    - text: Customer Insights õppetee
-      url: /learn/paths/build-customer-insights/
-- title: Customer Insightsiga alustamine
+      url: /dynamics365-release-plan/2020wave2/customer-data-platform/dynamics365-customer-insights/planned-features
+    - text: Avage oma keskkond
+      url: https://home.ci.ai.dynamics.com/
+- title: Sihtrühmaülevaadete kasutamise alustamine
   linkLists:
   - linkListType: get-started
     links:
     - text: Prooviversiooni kasutajaks registreerumine
       url: https://dynamics.microsoft.com/en-us/get-started/?appname=customerinsights
-    - text: Mis on uut sihtrühma ülevaadetes
+    - text: Mis on uut
       url: audience-insights/whats-new-audience-insights.md
-    - text: Lühijuhend
-      url: audience-insights/get-started.md
-  - linkListType: learn
-    links:
-    - text: Hakkame pihta
-      url: /learn/modules/get-started-customer-data-platform/
-- title: Sihtrühmaülevaadete haldamine
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Süsteemi konfigureerimine
-      url: audience-insights/system.md
-    - text: Kasutajaõiguste määratlemine
-      url: audience-insights/permissions.md
-    - text: Mitme keskkonna haldamine
-      url: audience-insights/manage-environments.md
-  - linkListType: learn
-    links:
-    - text: Customer Insightsi haldamine
-      url: /learn/modules/administer-customer-data-platform/
+    - text: Sihtrühmaülevaadete dokumentatsioon
+      url: audience-insights/index.yml
 - title: Võtke ühendust
   linkLists:
   - linkListType: overview
@@ -68,16 +46,16 @@ landingContent:
       url: https://go.microsoft.com/fwlink/?linkid=2074172
     - text: Teata probleemist
       url: https://go.microsoft.com/fwlink/?linkid=2079641
-- title: Andmete ühiskasutus võimaluste vahel
+- title: Sihtrühmaülevaadete õpetused
   linkLists:
-  - linkListType: how-to-guide
+  - linkListType: tutorial
     links:
-    - text: Võimaluste vahel lingi loomine
-      url: engagement-insights/integrate-audience-insights-engagement-insights.md
-    - text: Segmentide loomine aruannetes kasutamiseks
-      url: engagement-insights/integrate-audience-insights-segments.md
-    - text: Kasutajaprofiili atribuutide kasutamine interaktiivseks analüüsiks
-      url: engagement-insights/curate-dimensions.md
+    - text: Loo uus keskkond
+      url: audience-insights/home.md
+    - text: Kliendi koondprofiili loomine
+      url: /learn/modules/unified-customer-profile/
+    - text: Rakendusega töötamine
+      url: /learn/modules/working-with-customer-insights/
 - title: Sihtrühmaülevaadete andmete eksportimine
   linkLists:
   - linkListType: how-to-guide
@@ -88,6 +66,16 @@ landingContent:
       url: audience-insights/customer-card-add-in.md
     - text: Power BI konnektor
       url: audience-insights/export-power-bi.md
+- title: Sihtrühmaülevaadete haldamine
+  linkLists:
+  - linkListType: how-to-guide
+    links:
+    - text: Süsteemi konfigureerimine
+      url: audience-insights/system.md
+    - text: Kasutajaõiguste määratlemine
+      url: audience-insights/permissions.md
+    - text: Mitme keskkonna haldamine
+      url: audience-insights/manage-environments.md
 - title: Kaasamisülevaadete teave (eelversioon)
   linkLists:
   - linkListType: overview
